# docker-images

./: README.md
.github/workflows/: build.yml
python/: Dockerfile  README.md  pyproject.toml
r/: Dockerfile  README.md  getsysreqs.py  requirements.R
