[tool.poetry]
name = "lost-stats-docker-image"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
arch = "^4.15"
seaborn = "^0.11.0"
plotnine = "^0.7.1"
geoplot = "^0.4.1"
tensorflow = "<2.3"
econml = {git = "https://github.com/khwilson/econml.git", rev = "lost-stats"}
llvmlite = "<0.35"
geopandas = "^0.8.1"
Rtree = "^0.9.4"
linearmodels = "^4.24"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
statsmodels = "^0.12.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
